# planar_demo_robots

p2r3_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
p2r3_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  r6_arm.srdf  ros_controllers.yaml
p2r3_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  r6_arm_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
planar_arm_support/: CMakeLists.txt  package.xml
planar_arm_support/config/: config.rviz
planar_arm_support/launch/: display.launch
planar_arm_support/urdf/: p2r3_arm.xacro  planar_joint_macro.xacro  planar_link_macro.xacro  r3_arm.xacro  r6_arm.xacro  r8_arm.xacro
r3_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r3_arm_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  r3_robot.srdf  ros_controllers.yaml
r3_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  (+11 more)
r6_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
r8_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+44 files in other folders)
