<?xml version="1.0"?>
<package format="2">
  <name>planar_arm_support</name>
  <version>0.0.1</version>
  <description>Planar arms with revolute joints.</description>

  <maintainer email="jeroen.demaeyer@kuleuven.be">jeroen</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
